fixed z-index issue

--- a/dev/styles/_typography.scss
+++ b/dev/styles/_typography.scss
@@ -6,7 +6,8 @@ h1{
 }
 
 p{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    color: $black;
 }
 
 .vertical{
