--- a/dev/styles/components/pages/_landing.scss
+++ b/dev/styles/components/pages/_landing.scss
@@ -5,7 +5,8 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%)
+        transform: translate(-50%, -50%);
+        z-index: 1;
     }
     // .logo:hover{
     //     fill: $black;
