--- a/dev/styles/components/sideBars/_nav.scss
+++ b/dev/styles/components/sideBars/_nav.scss
@@ -1,4 +1,5 @@
 .nav{
+    z-index: 2;
     @include flexCenter();
     .nav--relative{
         position: relative;
@@ -14,15 +15,17 @@
         top: 0;
     }
     .nav__list{
-        @include absolute();
+        position: fixed;
         @include flex(row);
         @include flexCenter;
         display: none;
         padding-left: 0;
-        width: 100vw;
-        height: 100vh;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
         background: $backgroundTransparent;
-        z-index: 1;
+        z-index: 4;
         margin: 0;
         a{
             padding: 0.3rem 0.3rem;
@@ -81,7 +84,7 @@
         }
     }
     .hamburger {
-        z-index: 2;
+        z-index: 5;
         span {
             transform-origin: left;
             &:nth-of-type(1),
