--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -147,7 +147,8 @@ h1 {
           align-items: center; }
 
 p {
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  color: #3A3A3A; }
 
 .vertical {
   -webkit-writing-mode: vertical-rl;
@@ -223,6 +224,7 @@ a {
             justify-content: center; } }
 
 .nav {
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,9 +258,7 @@ a {
             align-items: center;
     top: 0; }
   .nav .nav__list {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -277,10 +277,12 @@ a {
             align-items: center;
     display: none;
     padding-left: 0;
-    width: 100vw;
-    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background: rgba(247, 253, 255, 0.85);
-    z-index: 1;
+    z-index: 4;
     margin: 0; }
     .nav .nav__list a {
       padding: 0.3rem 0.3rem;
@@ -349,7 +351,7 @@ a {
       -webkit-transition: all 0.5s ease;
       transition: all 0.5s ease; }
   .nav .hamburger {
-    z-index: 2; }
+    z-index: 5; }
     .nav .hamburger span {
       -webkit-transform-origin: left;
               transform-origin: left; }
@@ -534,7 +536,8 @@ header {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%); }
+          transform: translate(-50%, -50%);
+  z-index: 1; }
 
 @-webkit-keyframes move {
   25% {
@@ -572,7 +575,7 @@ header {
     margin-top: 2rem;
     position: relative;
     overflow: hidden; }
-  #projects figure:nth(1) {
+  #projects figure:nth-of-type(1) {
     margin-top: 0; }
   #projects figcaption {
     width: 100%;
@@ -585,10 +588,13 @@ header {
       font-size: 1.3rem;
       font-size: 14px;
       font-size: 1.4rem;
-      font-family: "Playfair";
+      font-family: "Playfair Display";
       font-weight: 400;
       color: #3A3A3A;
       line-height: 1.3rem; }
     #projects figcaption p {
       font-size: 1rem;
       margin-bottom: 0px; }
+  #projects .margin-right {
+    margin-top: 2rem;
+    margin-right: 2rem; }
